# autobot

./: .gitignore  LICENSE  autobot_cli.py  constants.py  dump.html  interactions.py  leads.py  pyproject.toml  requirements.txt  run_auto_api.ps1  run_auto_cli.ps1  run_autobot.ps1  session.py
.autobot_profile/: Last Browser  Local State  first_party_sets.db
.autobot_profile/Crashpad/: metadata
.autobot_profile/Crashpad/reports/: 03a7e54a-6389-46e6-bdc6-31c9067464a9.dmp  2f8f3b51-bf85-4fd0-8346-c2265b33fbe9.dmp  3e620c44-3218-4f85-9dfa-99f28c4a8990.dmp  46ed15f3-f782-4622-b09a-4abc15f4a1ee.dmp  48a5c680-89c1-4263-a804-3866d3a6348d.dmp  55bdff05-58e9-4774-80d3-0512d38d3579.dmp  564f1e8f-79e5-4075-b8ea-1a12ae07b79f.dmp  (+12 more)
.autobot_profile/Default/: BrowsingTopicsState  DIPS  Favicons  History  Preferences  Secure Preferences  Top Sites  Web Data
.autobot_profile/GrShaderCache/: data_0  data_1  f_000001  index
.autobot_profile/GraphiteDawnCache/: index
.autobot_profile/ShaderCache/: index
.autobot_profile/segmentation_platform/: ukm_db
IA/: app.py  carros copy.json  carros.json
api/: requirements.txt
api/_store/: ellegance.json
api/application/: api.py  constants.py  security.py
api/autobot_api.egg-info/: PKG-INFO  SOURCES.txt
api/domain/: ai.py  context.py  interactions.py  leads.py  schemas.py  session.py  store.py
api/infrastructure/: autocerto.py  playwright.py
cli/: autobot_cli.py  interactions.py  leads.py  requirements.txt  session.py  utils.py
front/autopanel/: README.md  angular.json  package-lock.json  package.json  tsconfig.json
(+206 files in other folders)
